# cfa-calibration-tools

./: .gitignore  .pre-commit-config.yaml  CLOUD_README.md  Makefile  README.md  conftest.py  deterministic_lv_model.mrp.toml  example_model.mrp.cloud.toml  example_model.mrp.docker.toml  example_model.mrp.task.toml  example_model.mrp.toml  pyproject.toml
.github/workflows/: pre-commit.yaml  run-pytest.yaml
assets/: schema.json
docs/: abc_interface.md  abc_interface.md~  design-overview.excalidraw  design-overview.md
scripts/: direct_runner.py  dummy_sampler.py  run_binom_calibration.py
src/calibrationtools/: __init__.py  async_runner.py  batch_generation_runner.py  calibration_app.py  calibration_results.py  direct_runner.py  exceptions.py  executor.py  formatting.py  json_utils.py  load_priors.py  mrp_csv_runner.py  particle.py  particle_evaluator.py  particle_population.py  particle_population_metrics.py  particle_reader.py  particle_updater.py  particlewise_generation_runner.py  perturbation_kernel.py  run_id.py  (+8 more)
tests/: conftest.py  test_batch_generation_runner.py  test_calibration_app.py  test_calibration_results.py  test_cloud_auto_size_from_config.py  test_cloud_auto_size_shared.py  test_cloud_batch_autoscale.py  test_cloud_cleanup.py  test_cloud_cleanup_cli.py  test_cloud_config.py  test_cloud_executor.py  test_cloud_naming.py  test_cloud_runner_config_factory.py  test_cloud_runner_execute.py  test_cloud_runner_session.py  test_cloud_session.py  test_cloud_sizing.py  test_cloud_tooling.py  test_example_cloud_contracts.py  test_example_mrp_configs.py  test_kernel_chaining.py  test_load_priors.py  test_mrp_csv_runner.py  test_particle.py  test_particle_evaluator.py  test_particle_population.py  test_particle_population_metrics.py  test_particle_reader.py  test_particle_updater.py  test_particlewise_generation_runner.py  test_perturbation_kernel.py  test_prior_distribution.py  test_run_id.py  test_sampler.py  test_sampler_run_integration.py  test_sampler_run_state.py  test_variance_adapter.py
(+17 files in other folders)
