[project]
name = "calibrationtools"
version = "0.1.0"
description = "Calibration runner framework to fit models to data."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mrp",
    "numpy>=2.3.4",
    "pyarrow>=23.0.0",
    "pytest>=9.0.2",
    "scipy>=1.16.3",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
package = true
workspace = { members = ["packages/*"] }

[tool.uv.sources]
mrp = { git = "https://github.com/cdcgov/cfa-mrp.git" }
